@@ -94,6 +94,7 @@ Useful commands
 - Note: `--include-missing-plugins` requires `--write-policy`.
 - npm run weftend -- safe-run <input> --out <dir> --adapter auto|none|archive|package|extension|iac|cicd|document|container|image|scm|signature
 - npm run weftend -- safe-run <input> --out <dir> --adapter archive --enable-plugin tar
+- npm run proofcheck:release
 - npm run verify:360:release:managed
 - See docs/GITHUB_ACTIONS.md for CI usage with .github/workflows/weftend_artifact_meter.yml
 
