@@ -82,6 +82,7 @@ const tests = [
   "dist/src/tools/greenteam/workflow_verify360_contract.test.js",
   "dist/src/tools/greenteam/docs_release_contract.test.js",
   "dist/src/tools/greenteam/verify_360_docs_sync_contract.test.js",
+  "dist/src/tools/greenteam/proofcheck_release_contract.test.js",
   "dist/src/tools/greenteam/verify_release_managed_contract.test.js",
   "dist/src/tools/greenteam/container_local_only_contract.test.js",
   "dist/src/engine/graph.test.js",
